Replace calls to boxed numeric type constructors with .valueOf calls